--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,27 @@ h3{
 #how-to-play{
     text-align: left;
 }
+
+.square {
+    width: 50px;
+    height: 50px;
+    display: flex;
+
+}
+.word-row{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+
+}
+.square-input{
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+    text-align: center;
+}
+
 button{
     border-radius: 5px;
     font-size:medium;
