--- a/styles.css
+++ b/styles.css
@@ -1,54 +1,62 @@
 body{
-    margin: 50 auto;
-    max-width: 1000px;
-    text-align: center;
+    text-align: center; 
+    background-color:lavender;
 }
-h3{
-    text-align: left;
+
+.full-page{
+    height: 900px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
+
+.title{
+    width: 700px;
+    border-bottom: solid 1px rgb(137, 70, 199);
+}
+
 #how-to-play{
     text-align: left;
 }
 
-.square {
-    width: 50px;
-    height: 50px;
+.input-container div{
     display: flex;
-
 }
-.word-row{
+.input-container .square{
+    width: 55px;
+    height: 55px;
+    border: 1px solid black;
+    box-sizing: border-box;
+    margin: 2px;
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 
 }
-.square-input{
-    width: 100%;
-    height: 100%;
-    font-size: 20px;
-    text-align: center;
+
+.keyboardRow{
+   margin: 5px;
 }
 
-button{
+.keyboardRow button{
     border-radius: 5px;
-    font-size:medium;
-    margin: 5px;
-    width: 50px;
-    height: 50px;
-}
-.keyboard{
-   width: 100%;
-   margin: 0 auto;
-}
-
-
-.key-delete{
-    width: 70px;
-    height: 50px;
+    margin: 2px;
+    width: 30px;
+    height: 30px;
+} 
+#key-delete{
+    width: 40px;
+    height: 30px;
 }
 
-.key-enter{
-    width: 70px;
-    height: 50px;
-}
+#key-enter{
+    width: 60px;
+    height: 30px;
+} 
+
+
+
+
+
+
