--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body{
     text-align: center; 
-    background-color:lavender;
+    background-color:rgb(222, 222, 241);
 }
 
 .full-page{
@@ -87,6 +87,39 @@ body{
     background-color: rgb(156, 202, 156) !important;
 }
 
+#window-message {
+    position: absolute;
+    top: 27%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    height: 50px; 
+    text-align: center;
+    color: rgb(18, 17, 18);
+  }
+  
+  #win-message {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    font-weight: bold;
+    background-color: rgb(156, 202, 156);
+    border: 2px solid rgb(6, 68, 26);
+    display: none;
+  }
+  
+  #gameover-message {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    font-weight: bold;
+    background-color: rgb(102, 106, 102);
+    border: 2px solid rgb(59, 74, 65);
+    display: none;
+  }
+  
 
 
 
