--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
 body{
+    font-size: 16px;
+    margin: 0 auto;
+    padding: 0;
     text-align: center; 
     background-color:rgb(222, 222, 241);
 }
 
+@media (max-width: 600px){
+    body{
+        font-size: 14px;
+    }
+}
 .full-page{
     height: 900px;
     display: flex;
