--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body{
 .input-container .square{
     width: 55px;
     height: 55px;
-    border: 1px solid black;
+    border: 1px solid #c061d5;
     box-sizing: border-box;
     margin: 2px;
     display: flex;
@@ -42,24 +42,22 @@ body{
 }
 
 .keyboardRow button{
-    border-radius: 5px;
-    margin: 1px;
-    width: 30px;
-    height: 30px;
+    background: #c680d6;
+    background-image: -webkit-linear-gradient(top, #c680d6, #2980b9);
+    background-image: -moz-linear-gradient(top, #c680d6, #2980b9);
+    background-image: -ms-linear-gradient(top, #c680d6, #2980b9);
+    background-image: -o-linear-gradient(top, #c680d6, #2980b9);
+    background-image: linear-gradient(to bottom, #c680d6, #2980b9);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: Georgia;
+    color: #2b252b;
     font-size: 20px;
-} 
-#key-delete{
-    width: 40px;
-    height: 30px;
-    font-size: 13px;
- 
+    padding: 10px 8px 9px 9px;
+    text-decoration: none;
 }
-
-#key-enter{
-    width: 60px;
-    height: 30px;
-    font-size: 13px;
-} 
+  
 
 
 .square.flip{
@@ -79,13 +77,28 @@ body{
 }
 
 .grey-overlay{
-    background-color:rgb(168, 157, 177) !important;
+    background: #403d40 !important;
+    background-image: -webkit-linear-gradient(top, #403d40, #a680b0) !important;
+    background-image: -moz-linear-gradient(top, #403d40, #a680b0) !important;
+    background-image: -ms-linear-gradient(top, #403d40, #a680b0) !important;
+    background-image: -o-linear-gradient(top, #403d40, #a680b0) !important;
+    background-image: linear-gradient(to bottom, #403d40, #a680b0) !important;
 }
 .yellow-overlay{
-    background-color: rgb(233, 233, 118) !important;
+    background: #fff700 !important;
+    background-image: -webkit-linear-gradient(top, #fff700, #a680b0) !important;
+    background-image: -moz-linear-gradient(top, #fff700, #a680b0) !important;
+    background-image: -ms-linear-gradient(top, #fff700, #a680b0) !important;
+    background-image: -o-linear-gradient(top, #fff700, #a680b0) !important;
+    background-image: linear-gradient(to bottom, #fff700, #a680b0) !important;
 }
 .green-overlay{
-    background-color: rgb(156, 202, 156) !important;
+    background: #1ce826 !important;
+    background-image: -webkit-linear-gradient(top, #1ce826, #a680b0) !important;
+    background-image: -moz-linear-gradient(top, #1ce826, #a680b0) !important;
+    background-image: -ms-linear-gradient(top, #1ce826, #a680b0) !important;
+    background-image: -o-linear-gradient(top, #1ce826, #a680b0) !important;
+    background-image: linear-gradient(to bottom, #1ce826, #a680b0) !important;
 }
 
 #window-message {
@@ -96,27 +109,36 @@ body{
     color: rgb(18, 17, 18);
   }
   
-  #win-message {
+#win-message {
    
     font-size: 24px;
     font-weight: bold;
-    background-color: rgb(156, 202, 156);
+    background: #c680d6;
+    background-image: -webkit-linear-gradient(top, #c680d6, #2980b9);
+    background-image: -moz-linear-gradient(top, #c680d6, #2980b9);
+    background-image: -ms-linear-gradient(top, #c680d6, #2980b9);
+    background-image: -o-linear-gradient(top, #c680d6, #2980b9);
+    background-image: linear-gradient(to bottom, #c680d6, #2980b9);
     border: 2px solid rgb(6, 68, 26);
     display: none;
-  }
+}
   
-  #gameover-message {
+#gameover-message {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
     font-size: 24px;
     font-weight: bold;
-    background-color: rgb(102, 106, 102);
+    background: #c680d6;
+    background-image: -webkit-linear-gradient(top, #c680d6, #2980b9);
+    background-image: -moz-linear-gradient(top, #c680d6, #2980b9);
+    background-image: -ms-linear-gradient(top, #c680d6, #2980b9);
+    background-image: -o-linear-gradient(top, #c680d6, #2980b9);
+    background-image: linear-gradient(to bottom, #c680d6, #2980b9);
     border: 2px solid rgb(59, 74, 65);
     display: none;
-  }
+}
   
-
 
 
 
