--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,15 @@ body{
 }
 
 .title{
+    font-family: 'Solitreo', cursive;
+    font-size: 20px;
     width: 700px;
     border-bottom: solid 1px rgb(137, 70, 199);
 }
 
 #how-to-play{
     text-align: left;
+    
 }
 
 .input-container div{
@@ -138,6 +141,22 @@ body{
     border: 2px solid rgb(59, 74, 65);
     display: none;
 }
+
+/* #invalid-word-message {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    font-weight: bold;
+    background: #c680d6;
+    background-image: -webkit-linear-gradient(top, #c680d6, #2980b9);
+    background-image: -moz-linear-gradient(top, #c680d6, #2980b9);
+    background-image: -ms-linear-gradient(top, #c680d6, #2980b9);
+    background-image: -o-linear-gradient(top, #c680d6, #2980b9);
+    background-image: linear-gradient(to bottom, #c680d6, #2980b9);
+    border: 2px solid rgb(59, 74, 65);
+    display: none;
+} */
   
 
 
