adding instructions change and new html

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,8 @@ body{
 }
 
 .title{
-    font-family: 'Solitreo', cursive;
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 30px;
     width: 700px;
     border-bottom: solid 1px #5D737E;
 }
@@ -44,21 +45,18 @@ body{
    
 }
 
-.keyboardRow button{
-    background: #F0F7EE;
-    background-image: -webkit-linear-gradient(top, #F0F7EE, #262426);
-    background-image: -moz-linear-gradient(top, #F0F7EE, #262426);
-    background-image: -ms-linear-gradient(top, #F0F7EE, #262426);
-    background-image: -o-linear-gradient(top, #F0F7EE, #262426);
-    background-image: linear-gradient(to bottom, #F0F7EE, #262426);
-    -webkit-border-radius: 28;
-    -moz-border-radius: 28;
+#instructions-button{
+    background: #929691;
     border-radius: 28px;
     font-family: Georgia;
     color: #2b252b;
     font-size: 20px;
     padding: 10px 8px 9px 9px;
     text-decoration: none;
+}
+img{
+    width: 35px;
+    height: 35px;
 }
 
 .keyboardRow button{
@@ -68,8 +66,6 @@ body{
     background-image: -ms-linear-gradient(top, #F0F7EE, #262426);
     background-image: -o-linear-gradient(top, #F0F7EE, #262426);
     background-image: linear-gradient(to bottom, #F0F7EE, #262426);
-    -webkit-border-radius: 28;
-    -moz-border-radius: 28;
     border-radius: 28px;
     font-family: Georgia;
     color: #2b252b;
@@ -85,8 +81,6 @@ body{
     background-image: -ms-linear-gradient(top, #F0F7EE, #262426);
     background-image: -o-linear-gradient(top, #F0F7EE, #262426);
     background-image: linear-gradient(to bottom, #F0F7EE, #262426);
-    -webkit-border-radius: 28;
-    -moz-border-radius: 28;
     border-radius: 28px;
     font-family: Georgia;
     color: #2b252b;
@@ -114,28 +108,13 @@ body{
 }
 
 .grey-overlay{
-    background: #5D737E !important;
-    /* background-image: -webkit-linear-gradient(top, #5D737E, #262426) !important;
-    background-image: -moz-linear-gradient(top, #5D737E, #262426) !important;
-    background-image: -ms-linear-gradient(top, #5D737E, #262426) !important;
-    background-image: -o-linear-gradient(top, #5D737E, #262426) !important;
-    background-image: linear-gradient(to bottom, #5D737E, #262426) !important; */
+    background: #929691 !important;
 }
 .yellow-overlay{
     background: #FFF07C !important;
-    /* background-image: -webkit-linear-gradient(top, #FFF07C, #262426) !important;
-    background-image: -moz-linear-gradient(top, #FFF07C, #262426) !important;
-    background-image: -ms-linear-gradient(top, #FFF07C, #262426) !important;
-    background-image: -o-linear-gradient(top, #FFF07C, #262426) !important;
-    background-image: linear-gradient(to bottom, #FFF07C, #262426) !important; */
 }
 .green-overlay{
     background: #87BBA2 !important;
-    /* background-image: -webkit-linear-gradient(top, #87BBA2, #262426) !important;
-    background-image: -moz-linear-gradient(top, #87BBA2, #262426) !important;
-    background-image: -ms-linear-gradient(top, #87BBA2, #262426) !important;
-    background-image: -o-linear-gradient(top, #87BBA2, #262426) !important;
-    background-image: linear-gradient(to bottom, #87BBA2, #262426) !important; */
 }
 
 #window-message {
@@ -151,11 +130,7 @@ body{
     font-size: 24px;
     font-weight: bold;
     background: #87BBA2;
-    background-image: -webkit-linear-gradient(top, #87BBA2, #262426);
-    background-image: -moz-linear-gradient(top, #87BBA2, #262426);
-    background-image: -ms-linear-gradient(top, #87BBA2, #262426);
-    background-image: -o-linear-gradient(top, #87BBA2, #262426);
-    background-image: linear-gradient(to bottom, #87BBA2, #262426);
+
     border: 2px solid rgb(6, 68, 26);
     display: none;
 }
@@ -166,12 +141,8 @@ body{
     transform: translateY(-50%);
     font-size: 24px;
     font-weight: bold;
-    background: #F0F7EE;
-    background-image: -webkit-linear-gradient(top, #F0F7EE, #262426);
-    background-image: -moz-linear-gradient(top, #F0F7EE, #262426);
-    background-image: -ms-linear-gradient(top, #F0F7EE, #262426);
-    background-image: -o-linear-gradient(top, #F0F7EE, #262426);
-    background-image: linear-gradient(to bottom, #F0F7EE, #262426);
+    background: #929691;
+   
     border: 2px solid rgb(59, 74, 65);
     display: none;
 }
@@ -202,4 +173,7 @@ body{
     border: 1px solid black;
 } */
 
+.intructions{
+    text-align: left;
+}
 
