--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,12 @@ body{
     background-color:#F0F7EE;
 }
 
+/* @media only screen and (max-width: 768px) {
+    [class*="col-"] {
+      width: 100%;
+    }
+  } */
+
 .full-page{
     height: 900px;
     display: flex;
@@ -118,12 +124,11 @@ img{
 }
 
 #window-message {
-   
     width: 300px;
     height: 50px; 
     text-align: center;
     color: rgb(18, 17, 18);
-  }
+}
   
 #win-message {
    
@@ -146,32 +151,6 @@ img{
     border: 2px solid rgb(59, 74, 65);
     display: none;
 }
-
-/* #invalid-word-message {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 24px;
-    font-weight: bold;
-    background: #c680d6;
-    background-image: -webkit-linear-gradient(top, #c680d6, #2980b9);
-    background-image: -moz-linear-gradient(top, #c680d6, #2980b9);
-    background-image: -ms-linear-gradient(top, #c680d6, #2980b9);
-    background-image: -o-linear-gradient(top, #c680d6, #2980b9);
-    background-image: linear-gradient(to bottom, #c680d6, #2980b9);
-    border: 2px solid rgb(59, 74, 65);
-    display: none;
-} */
-  
-/* #alert {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    padding: 20px;
-    border: 1px solid black;
-} */
 
 .intructions{
     text-align: left;
