--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+@media only screen and (max-width: 600px){
+    body{
+        font-size: 14px;
+        
+    }
+}
+
 body{
     margin: 0 auto;
     text-align: center; 
@@ -42,7 +49,6 @@ body{
 
 .keyboardRow{
    margin: 1px;
-   
 }
 
 img{
@@ -106,6 +112,9 @@ img{
 }
 .green-overlay{
     background: #87BBA2 !important;
+}
+.black-overlay{
+    background: #131413 !important;
 }
 
 #window-message {
