--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,3 @@
-@media only screen and (max-width: 600px){
-    body{
-        font-size: 14px;
-        
-    }
-}
-
 body{
     margin: 0 auto;
     text-align: center; 
@@ -58,11 +51,11 @@ img{
 
 .keyboardRow button{
     background: #F0F7EE;
-    background-image: -webkit-linear-gradient(top, #F0F7EE, #262426);
-    background-image: -moz-linear-gradient(top, #F0F7EE, #262426);
-    background-image: -ms-linear-gradient(top, #F0F7EE, #262426);
-    background-image: -o-linear-gradient(top, #F0F7EE, #262426);
-    background-image: linear-gradient(to bottom, #F0F7EE, #262426);
+    background-image: -webkit-linear-gradient(top, #F0F7EE, #e6e8d7);
+    background-image: -moz-linear-gradient(top, #F0F7EE, #e6e8d7);
+    background-image: -ms-linear-gradient(top, #F0F7EE, #e6e8d7);
+    background-image: -o-linear-gradient(top, #F0F7EE, #e6e8d7);
+    background-image: linear-gradient(to bottom, #F0F7EE, #e6e8d7);
     border-radius: 28px;
     font-family: Georgia;
     color: #2b252b;
@@ -73,11 +66,11 @@ img{
 
 .reset-button{
     background: #F0F7EE;
-    background-image: -webkit-linear-gradient(top, #F0F7EE, #262426);
-    background-image: -moz-linear-gradient(top, #F0F7EE, #262426);
-    background-image: -ms-linear-gradient(top, #F0F7EE, #262426);
-    background-image: -o-linear-gradient(top, #F0F7EE, #262426);
-    background-image: linear-gradient(to bottom, #F0F7EE, #262426);
+    background-image: -webkit-linear-gradient(top, #F0F7EE, #e6e8d7);
+    background-image: -moz-linear-gradient(top, #F0F7EE, #e6e8d7);
+    background-image: -ms-linear-gradient(top, #F0F7EE, #e6e8d7);
+    background-image: -o-linear-gradient(top, #F0F7EE, #e6e8d7);
+    background-image: linear-gradient(to bottom, #F0F7EE, #e6e8d7);
     border-radius: 28px;
     font-family: Georgia;
     color: #2b252b;
@@ -114,7 +107,7 @@ img{
     background: #87BBA2 !important;
 }
 .black-overlay{
-    background: #131413 !important;
+    background: #262426 !important;
 }
 
 #window-message {
@@ -149,3 +142,26 @@ img{
     text-align: left;
 }
 
+@media only screen and (max-width: 600px){
+    .full-page{
+        height: 90vh;
+    }
+    
+    .title{
+        font-size: 20px;
+    }
+
+    .input-container .square{
+        width: 50px;
+        height: 50px;
+        font-size: 45px;
+    }
+
+    .keyboardRow button{
+        font-size: 15px;
+    }
+    
+    .reset-button{
+        font-size: 20px;
+    }    
+}
