--- a/styles.css
+++ b/styles.css
@@ -143,8 +143,9 @@ img{
 }
 
 @media only screen and (max-width: 600px){
+    body,
     .full-page{
-        height: 90vh;
+        height: 85vh;
     }
     
     .title{
