--- a/styles.css
+++ b/styles.css
@@ -145,6 +145,9 @@ img{
 @media only screen and (max-width: 600px){
     body,
     .full-page{
+        max-width: 100%;
+        overflow-x: hidden;
+        overflow-y: hidden;
         height: 85vh;
     }
     
