--- a/stylesinstructionspage.css
+++ b/stylesinstructionspage.css
@@ -27,3 +27,17 @@ img{
     width: 35px;
     height: 35px;
 }
+
+@media only screen and (max-width: 600px){
+    body,
+    .full-page{
+        max-width: 100%;
+        overflow-x: hidden;
+        
+        height: 95vh;
+    }
+    
+    .title{
+        font-size: 15px;
+    }
+}
