--- a/styles.css
+++ b/styles.css
@@ -143,12 +143,12 @@ img{
 }
 
 @media only screen and (max-width: 600px){
-    body,
+    body
     .full-page{
         max-width: 100%;
         overflow-x: hidden;
-        
-        height: 80vh;
+        overflow-y: hidden;
+        height: 90vh;
     }
     
     .title{
