--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,11 @@ img{
     display: none;
 }
 
+#secret-wordle {
+    display: none;
+    font-size: 16px;
+}
+
 .intructions{
     text-align: left;
 }
